# terrible-breakout-clone

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.A1CEE2CC8557EE52.idx
